--- a/content/experiments/css-ghost.njk
+++ b/content/experiments/css-ghost.njk
@@ -1,5 +1,6 @@
 ---
 title: CSS Ghost
+description: "Pure CSS ghost created for the <a href='https://32bit.mysteryslug.com/events/halloween-2023/''>32bit.cafe Halloween 2023 challenge</a>."
 date: 2023-10-25
 ---
 
@@ -172,7 +173,6 @@ date: 2023-10-25
 
 {% block main %}
 <div class="reading-width h-sm">
-    <p>Pure CSS ghost created for the <a href="https://32bit.mysteryslug.com/events/halloween-2023/">32bit.cafe Halloween 2023 challenge</a>.</p>
     <h2>Other 32bit.cafe submissions</h2>
     <ul>
         <li><a href="https://ribo.zone/graveyard">Link graveyard by Ribo.zone</a></li>
