--- a/assets/css/themes/_spooky.css
+++ b/assets/css/themes/_spooky.css
@@ -8,7 +8,8 @@ html[data-scheme='dark'][data-spooky='true'] {
   --linkhover: LawnGreen;
   --text: LavenderBlush;
   --pink: DeepPink;
-  --dashboard-outline: Indigo;
+  --dashboard-bg: Indigo;
+  --dashboard-outline: #2e004f;
   --logo-anim-1: OrangeRed;
   --logo-anim-2: OrangeRed;
   --logo-anim-3: OrangeRed;
@@ -27,7 +28,8 @@ html[data-scheme='light'][data-spooky='true'] {
     --linkhover: Green;
     --text: Black;
     --pink: DeepPink;
-    --dashboard-outline: LawnGreen;
+    --dashboard-bg: PaleGreen;
+    --dashboard-outline: LimeGreen;
     --logo-anim-1: BlueViolet;
     --logo-anim-2: BlueViolet;
     --logo-anim-3: OrangeRed;
