--- a/content/links.njk
+++ b/content/links.njk
@@ -162,6 +162,11 @@ eleventyNavigation:
       </a>
     </li>
     <li class="buttonwall__image">
+      <a href="https://starbreaker.org/">
+        <img src="/images/buttons/starbreaker.png" alt="Starbreaker">
+      </a>
+    </li>
+    <li class="buttonwall__image">
       <a href="https://whiona.me/">
         <img src="/images/buttons/whiona.png" alt="Whiona">
       </a>
