🔥 Remove halloween toggle

--- a/assets/css/components/_toggle.css
+++ b/assets/css/components/_toggle.css
@@ -24,7 +24,6 @@
   background-image: linear-gradient(to right, var(--text) 50%, transparent 50%);
 }
 
-.toggle--spooky::before {
-  content: '🎃';
-  font-size: 1rem;
+.toggle--spooky {
+  display: none;
 }
