💍 Add Ladies of the Link webring

--- a/content/index.njk
+++ b/content/index.njk
@@ -129,7 +129,7 @@ title: Home
 				<a href="{{ latestBlog.url }}">{% if latestBlog.data.title %}{{ latestBlog.data.title | safe }}{% else %}{{ latestBlog.url }}{% endif %}</a>{% if latestBlog.data.description %}<p class="description"> {{latestBlog.data.description | safe}}</p>{%endif%}
 				<h3>🧪 Experiment</h3>
 				<a href="{{ latestExperiment.url }}">{% if latestExperiment.data.title %}{{ latestExperiment.data.title | safe }}{% else %}{{ latestExperiment.url }}{% endif %}</a>{% if latestExperiment.data.description %}<p class="description">{{latestExperiment.data.description | safe}}</p>{%endif%}
-				<h3>🛠 Changelog</h3>
+				<h3>🛠️ Changelog</h3>
 				<div class="description">
 					{{latestChangelog.content|safe}}
 				</div>
@@ -162,13 +162,13 @@ title: Home
 				<script type="text/javascript" src="https://neossg.neocities.org/onionring-widget.js"></script>
 			</div>
 		</div>
-		{# <div class="webring--ladiesofthelink">
+		<div class="webring--ladiesofthelink">
 				<a href="https://webri.ng/webring/ladiesofthelinks/previous?via=https%3A%2F%2Ffrills.dev" class="webring__prev">Previous Ladies of the Links site</a>
 				<a href="https://ladiesofthe.link/">Ladies of the Links</a>
 				<a href="https://webri.ng/webring/ladiesofthelinks/random?via=https%3A%2F%2Ffrills.dev" class="webring__random">Random Ladies of the Links site</a>
 				<a href="https://webri.ng/webring/ladiesofthelinks/next?via=https%3A%2F%2Ffrills.dev" class="webring__next">Next Ladies of the Links site</a>
 			</table>
-		</div> #}
+		</div>
 		<div class="webring--genlissa">
 			<a href="https://webri.ng/webring/genlissa/previous?via=http://frills.dev" class="webring__prev">Previous Site</a>
 			<a href="https://genlissa.neocities.org/#members">Gen Lissa</a>
