--- a/structure/global/header.njk
+++ b/structure/global/header.njk
@@ -5,7 +5,7 @@
 		modifiers = 'callout--small callout--warning mb-0',
 		header = '<h2>🛠️ Your JavaScipt is disabled</h2>',
 		body = '
-			<p>This website uses JavaScript, please read <a href="/Site#javascript">About the Site</a> to understand why</p>
+			<p>This website uses JavaScript, please read <a href="/site#javascript">About the Site</a> to understand why</p>
 	') }}</div></noscript>
 
 <header class="page__header grid grid--header">
@@ -15,9 +15,6 @@
     </a>
     {% include "structure/global/nav.njk" %}
     <div class="settings">
-        <button id="spookyButton" class="button ghost toggle toggle--spooky">
-            Toggle spooky theme
-        </button>
         <button id="colorSchemeButton" class="button ghost toggle toggle--colorscheme">
             Toggle dark theme
         </button>
