📃 Fix type in JS explain on /site

--- a/content/site.njk
+++ b/content/site.njk
@@ -37,8 +37,8 @@ title: About the site
 
 		<h2 id="javascript">JavaScript</h2>
 		<p>As my website built with a static site generator, if I want anything dynamic, I need to use JavaScript. You can still access the majority of the content of my website with JavaScript disabled, but here is a list of how it is used on my website:</p>
-		<ul>
-			<li>iframe use JavaScript to collect statistics on webpage vistor count. This is implemented using Goatcounter, a privacy focused website visitor counter. I use this to understand how useful my content is to people based on how often pages are visited. Pages visited and the country of your IP address are collected. You are able to <a href="https://www.goatcounter.com/help/skip-dev">opt out of Goatcounter</a>.</li>
+		<ul class="stars">
+			<li>I use JavaScript to collect statistics on webpage vistor count. This is implemented using Goatcounter, a privacy focused website visitor counter. I use this to understand how useful my content is to people based on how often pages are visited. Pages visited and the country of your IP address are collected. You are able to <a href="https://www.goatcounter.com/help/skip-dev">opt out of Goatcounter</a>.</li>
 			<li>Guestbook uses JavaScript to fetch comments from a Google Sheet.</li>
 			<li>Theme and dark mode switcher uses JavaScript to change the emojis and styles of the website.</li>
 			<li>Website Carbon Badge uses JavaScript to evaluate the greeness of my website.</li>
