📍 Add 32bit cafe button

--- a/content/links.njk
+++ b/content/links.njk
@@ -17,6 +17,11 @@ eleventyNavigation:
 <section class="reading-width">
   <ul class="buttonwall">
     <li class="buttonwall__image">
+      <a href="https://32bit.cafe">
+        <img src="/images/buttons/32bitcafe.png" alt="32bit cafe">
+      </a>
+    </li>
+    <li class="buttonwall__image">
       <a href="https://pinkvampyr.leprd.space/accessiblenet/directory">
         <img src="/images/buttons/accessiblenet.png" alt="Accessible New">
       </a>
@@ -285,6 +290,9 @@ eleventyNavigation:
     </li>
     <li class="buttonwall__item">
       <a href="https://picdefacer.com/" style="font-size: 12px; background-color: #5577ff; color: #fff;">image anonymizer</a>
+    </li>
+    <li class="buttonwall__item">
+      <a href="https://tinypng.com/" style="font-size: 12px; background-color: #080706; color: #f7f3f0;">TinyPNG</a>
     </li>
   </ul>
 
