--- a/content/_drafts/frillsify.css
+++ b/content/_drafts/frillsify.css
@@ -683,7 +683,7 @@ input[type="submit"] {
 
     .topnav a {
         top: auto;
-        border-radius: 20px;
+        border-radius: 0;
         margin: auto;
         font-size: 1rem;
     }
