👽 Fix Brown on HTML named colours

--- a/content/experiments/html-named-colors.njk
+++ b/content/experiments/html-named-colors.njk
@@ -450,7 +450,7 @@ tags:
         <dt>Hex value</dt>
         <dd>#A52A2A <button type="button" class="copyButton noscriptHide" data-copy="#A52A2A">Copy hex value</button></dd>
         <dt>RGB value</dt>
-        <dd>rgb(165,42,42 <button type="button" class="copyButton noscriptHide" data-copy="rgb(165,42,42)">Copy rgb value</button></dd>
+        <dd>rgb(165,42,42) <button type="button" class="copyButton noscriptHide" data-copy="rgb(165,42,42)">Copy rgb value</button></dd>
         <div class="namedcolours__cc-wrap">
           <div class="namedcolours__cc">
             <dt class="blob blob__black">Colour contrast on black</dt>
