✨ Big old structure update

--- a/assets/css/components/_nav.css
+++ b/assets/css/components/_nav.css
@@ -1,11 +1,12 @@
-
-
 @media (min-width: 1200px) {
   .page__nav--top {
-    max-width: 50vw;
+    max-width: 700px;
   }
 }
 
+.page__nav {
+  padding-top: 0.5rem;
+}
 
 .page__nav ul {
   display: flex;
@@ -17,15 +18,20 @@
   padding: 0;
   margin-left: 0;
   column-gap: 1rem;
-  row-gap: 0.7rem;
+  row-gap: 0.5rem;
 }
 
 @media (min-width: 768px) {
   .page__nav ul {
     column-gap: 1.5rem;
-    row-gap: 1.5rem;
     justify-content: flex-start;
     margin: 0;
+  }
+}
+
+@media (min-width: 992px) {
+  .page__nav ul {
+    row-gap: 1.5rem;
   }
 }
 
