--- a/structure/core/_template-end.njk
+++ b/structure/core/_template-end.njk
@@ -1,4 +1,7 @@
+<script src="/js/main.js"></script>
 <script data-goatcounter="https://frills.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
-
+{%- if scripts -%}
+{{scripts|safe}}
+{%- endif -%}
 </body>
 </html>
