--- a/structure/global/footer.njk
+++ b/structure/global/footer.njk
@@ -1,5 +1,4 @@
-<footer class="page__footer grid grid--main">
-    <div></div>
+<footer class="page__footer grid grid--offset grid--footer">
     <nav aria-label="Footer" class="page__nav">
         <ul>
             <li><span class="emoji" aria-hidden="true">♿</span> <a href="/accessibility">Accessibility</a>
