--- a/assets/css/base/_list.css
+++ b/assets/css/base/_list.css
@@ -7,11 +7,11 @@ ol {
 }
 
 ul {
-  padding-left: 16px;
+  padding-left: 1rem;
 }
 
 ol {
-  padding-left: 22px;
+  padding-left: 1rem;
 }
 
 ul.unstyled,
