--- a/assets/css/base/_page.css
+++ b/assets/css/base/_page.css
@@ -4,10 +4,16 @@
   max-width: 1600px;
   margin: 0 auto;
   min-height: 100vh;
-  padding: 0 14px;
+  padding: 0 22px;
 }
 
 @media (min-width: 768px) {
+  .page {
+    padding: 0 36px;
+  }
+}
+
+@media (min-width: 992px) {
   .page {
     padding: 0 56px;
   }
@@ -31,7 +37,6 @@
 
 @media (min-width: 768px) {
   .page__main {
-    min-height: 70vh;
     padding: 60px 0 0 0;
   }
 }
