--- a/content/experiments/change-background-colour-with-range-input.njk
+++ b/content/experiments/change-background-colour-with-range-input.njk
@@ -2,10 +2,7 @@
 title: Changing background colour with range input
 description: Use the range input to change the colour of the background
 date: 2023-08-01
----
-
-{% block head %}
-<style>
+style: '
   :root {
     --hue: 255;
     --hsl: hsl(var(--hue), 100%, 70%);
@@ -41,7 +38,11 @@ date: 2023-08-01
   input {
     accent-color: var(--hsl);
   }
-</style>
+'
+---
+
+{% block css %}
+
 {% endblock %}
 
 {% block main %}
