--- a/structure/core/_head.njk
+++ b/structure/core/_head.njk
@@ -1,14 +1,19 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{%if title %}{{ title | safe}} -{% endif %} {{ metadata.title }} </title>
+    <title>{%if title %}{{ title | safe}} -{% endif %} {{ metadata.title }}</title>
     <meta name="description" content="{{ description or metadata.description }}">
+    {# Favicon -#}
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%2210 0 100 100%22><text y=%22.90em%22 font-size=%2290%22>🌷</text></svg>">
     <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    {# Style -#}
     <link href="/css/main.css?nocache=8008135" rel="stylesheet">
+    {% if style -%}
+    <style>{{ style | safe }}</style>
+    {%- endif %}
+    {# Font -#}
     <link rel="preload" as="font" href="/fonts/atkinson-hyperlegible/regular.woff2" crossorigin>
-    {% block head %}{% endblock %}
     <noscript><link href="/css/noscript.css?nocache=8008135" rel="stylesheet"></noscript>
 </head>
